--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "backbone": "latest",
+    "browser-sync": "^2.12.3",
     "ejs": "^2.4.1",
     "exorcist": "^0.4.0",
     "express": "^4.13.4",
+    "gulp-nodemon": "^2.0.6",
     "jquery": "latest",
     "underscore": "latest",
     "wavesurfer.js": "latest"
