--- a/package.json
+++ b/package.json
@@ -7,32 +7,18 @@
     "dispatcher": "./src/core/dispatcher.js"
   },
   "devDependencies": {
-    "browserify": "latest",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
-    "gulp": "latest",
-    "gulp-sourcemaps": "latest",
-    "gulp-util": "latest",
-    "handlebars": "latest",
     "handlebars-loader": "^1.2.0",
-    "hbsfy": "latest",
-    "less": "^2.6.1",
     "less-loader": "^2.2.3",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "vinyl-buffer": "latest",
-    "vinyl-source-stream": "latest",
-    "watchify": "latest"
+    "webpack": "^1.13.0"
   },
   "dependencies": {
-    "backbone": "latest",
-    "browser-sync": "^2.12.3",
-    "ejs": "^2.4.1",
-    "exorcist": "^0.4.0",
-    "express": "^4.13.4",
-    "gulp-nodemon": "^2.0.6",
-    "jquery": "latest",
-    "underscore": "latest",
-    "wavesurfer.js": "latest"
+    "backbone": "^1.3.3",
+    "jquery": "^2.2.3",
+    "underscore": "^1.8.3",
+    "wavesurfer.js": "^1.1.1"
   }
 }
