--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "backbone": "^1.3.3",
+    "dragdealer": "^0.9.9",
     "jquery": "^2.2.3",
     "underscore": "^1.8.3",
     "wavesurfer.js": "^1.1.1"
