--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dispatcher": "./src/core/dispatcher.js"
   },
   "devDependencies": {
+    "less": "^2.6.1",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "handlebars-loader": "^1.2.0",
